Updated by task 'AUTO_TM_MT_1768502602398' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/3480be9a839ce4f62718d6f0c5fa23c029aaee37

--- a/help/release-notes/universal-editor/2024/2024-11-13.md
+++ b/help/release-notes/universal-editor/2024/2024-11-13.md
@@ -4,8 +4,8 @@ description: Queste sono le note sulla versione 2024.11.13 dell’editor univers
 feature: Release Information
 role: Admin
 exl-id: cb94e436-20cd-4c6a-b4c8-07405a12b6ee
-source-git-commit: cdad4954b13f5582bebfd604220da90529231ccd
-workflow-type: ht
+source-git-commit: 9adf2bc4f9f25ee7fc0a39b0f1a3ae9e45fce7d2
+workflow-type: tm+mt
 source-wordcount: '370'
 ht-degree: 100%
 
@@ -24,7 +24,7 @@ Queste sono le note sulla versione del 13 novembre 2024 dell’editor universale
 * **Opzione Riprova per timeout CORS:** con la [versione 2024.09.26](/help/release-notes/universal-editor/2024/2024-09-26.md), era stato introdotto un pannello di errore quando l’editor non riusciva a stabilire una connessione alla pagina caricata, impedendo stati del caricamento infiniti.
    * Con questa versione, l’editor continua automaticamente a riprovare e, una volta stabilita la connessione, è possibile riprendere la modifica.
    * Questa funzione è particolarmente utile per le pagine che potrebbero richiedere più di un minuto di timeout prima dell’inizializzazione.
-* **Miglioramenti dell’estensibilità per sviluppatori:** l’editor universale ora supporta la trasmissione di eventi alle estensioni, consentendo a chi sviluppa estensioni di iscriversi agli [eventi](/help/implementing/universal-editor/events.md).
+* **Miglioramenti dell’estensibilità per sviluppatori:** l’editor universale ora supporta la trasmissione di eventi alle estensioni, consentendo a chi sviluppa estensioni di iscriversi agli [eventi](/help/implementing/universal-editor/events-universal-editor.md).
    * Potrà così [reagire agli eventi dell’editor direttamente dalle proprie estensioni personalizzate](/help/implementing/universal-editor/extending.md).
 * **Selezione persistente dei componenti:** i componenti selezionati nell’editor ora persisteranno anche dopo l’aggiornamento della finestra del browser.
    * In questo modo l’utente può continuare a lavorare senza perdere il contesto durante il ricaricamento della pagina.
