Updated by task 'AUTO_TM_MT_1769118444755' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/395af16010fd1667beaaa2ff7009763fe996a5a8

--- a/help/implementing/cloud-manager/release-notes/2025/2025-12-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-12-0.md
@@ -1,46 +1,90 @@
 ---
-title: Note sulla versione 2026.1.0 di Cloud Manager
-description: Scopri la versione 2026.1.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.12.0 di Cloud Manager
+description: Scopri la versione 2025.12.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
 source-git-commit: 54566e3ea99c4ac03e266eab52163a516701b611
 workflow-type: tm+mt
-source-wordcount: '918'
-ht-degree: 66%
+source-wordcount: '1149'
+ht-degree: 61%
 
 ---
 
-# Note sulla versione 2026.1.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.12.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
 
-Scopri la versione 2026.1.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.12.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La versione 2026.1.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata venerdì 22 gennaio 2026.
+La data di pubblicazione della versione 2025.12.0 di Cloud Manager in AEM as a Cloud Service è il venerdì 4 dicembre 2025.
 
-La prossima pubblicazione è pianificata per il venerdì 5 febbraio 2026.
+La prossima versione è pianificata per il venerdì 22 gennaio 2026.
+
+## Novità - Experience Hub {#experience-hub-whats-new}
+
+* **Accesso semplificato ad Experience Hub**
+
+  La selezione del ruolo utente è stata rimossa e una guida è stata aggiunta per la selezione del **predefinito** (Autore contenuto, Libreria risorse, Amministratore e IT).
+
+* **Annunci** e **Aggiornamenti dei prodotti**
+
+  Puoi passare dagli annunci disponibili all’altro e iterarli, ma anche ignorarli.
+
+* **Recenti**
+
+  È stato aggiunto il supporto per pagine e risorse aggiuntive, tra cui editor pagina, risorse, programmi, dettagli di esecuzione della pipeline e pagine di sicurezza.
+
+* **Elenco programmi**
+
+  Visualizzazione dei programmi AEM Cloud Manager della tua organizzazione con accesso rapido alla pagina dei dettagli di Cloud Manager.
+
+* **Guide AEM**
+
+  Azione rapida e collegamento per gli ambienti di authoring in cui sono abilitati componenti aggiuntivi di AEM Guides.
 
 ## Novità - Cloud Manager {#cloud-manager-whats-new}
-
-* **Le pipeline di configurazione ora supportano i segreti gestiti**
-
-  Ora gli utenti possono aggiungere e gestire i segreti direttamente nelle pipeline di configurazione di Cloud Manager. Questi segreti sostituiscono in modo sicuro i valori nelle specifiche di configurazione della pipeline e supportano distribuzioni flessibili e specifiche per l’ambiente.
-
-  ![Opzione Visualizza/Modifica variabili nel menu a discesa per una pipeline selezionata](/help/implementing/cloud-manager/release-notes/assets/view-edit-variables-option.png)
-  *Opzione Visualizza/Modifica variabili nel menu a discesa per una pipeline selezionata.*
-
-  ![Finestra di dialogo Configurazione variabili ](/help/implementing/cloud-manager/release-notes/assets/view-edit-variables-variablesconfig-dialogbox.png)*Finestra di dialogo Configurazione variabili.*
 
 * **Stabilità, prestazioni e affidabilità migliorate**
 
   Questa versione include aggiornamenti di ottimizzazione e manutenzione che migliorano la stabilità, le prestazioni e l’affidabilità di Cloud Manager.
 
+* **Ambiente di testing specializzato**
 
+  >[!NOTE]
+  >
+  >Sono ora disponibili per l’acquisto ambienti di test specializzati. Contatta il tuo rappresentante Adobe per effettuare un ordine.
+
+  Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
+
+  Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
+
+  ![Finestra di dialogo Aggiungi ambiente con il pulsante di scelta Ambiente di test specializzato selezionato](/help/implementing/cloud-manager/release-notes/assets/specialized-test-environment.png)
+
+<!--
+>[!NOTE]
+>
+>Adobe has closed beta access requests for Specialized Testing Environments, having reached a sufficient number of participants. The feature is now in preparation for general availability.
+
+If you are interested in testing this new feature and sharing your feedback, send an email to [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) from your email address associated with your Adobe ID. -->
+
+
+* **Rollback con un solo clic per le distribuzioni della pipeline**
+
+  Ripristina rapidamente una distribuzione precedente se il codice sorgente del cliente più recente non funziona come previsto. Non è necessario eseguire nuovamente l’intera pipeline o ripristinare manualmente i commit. <!--https://jira.corp.adobe.com/browse/CMGR-69556 -->
+
+  Consulta [Ripristinare il codice precedente distribuito in AEM as a Cloud Service](/help/operations/restore-previous-code-deployed.md).
+
+  Consulta anche [Ripristino dei contenuti in AEM as a Cloud Service](/help/operations/restore.md).
+
+* **Configurazione self-service di WAF per Edge Delivery Services**
+
+  Quando si crea un programma Edge Delivery Services in Cloud Manager, è possibile attivare il Firewall applicazione Web (WAF). Questa impostazione protegge il sito da traffico dannoso e attacchi DDoS immediatamente, riducendo il lavoro di configurazione manuale.
+
+  Consulta [Creare il primo sito Edge Delivery con un clic](/help/implementing/cloud-manager/edge-delivery/create-edge-delivery-site.md).
 
 
 ## Programmi Beta {#private-beta-program}
